# RodA5nZdNLhJQOci

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCKER_SETUP_UPDATES.md  Dockerfile  PROJECT_STATUS.md  README.md  SIMPLIFIED_SETUP.md  WEEKLY_REPORTS_IMPLEMENTATION.md  app.py  bot_state.json  config_loader.py  docker-compose.simple.yml  docker-compose.yml  main.py  notification_history.json  project_details  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  simulated_trades.json  test_bot.py  test_metrics.py  test_simplified_setup.py  ws_client.py
app/: __init__.py  config.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: bitcoin.py  config.py  metrics.py  reports.py  telegram.py  trading.py  trading_bot.py  websocket.py
app/core/: config_loader.py  email_notifier.py  telegram_notifier.py  ws_client.py
app/models/: bitcoin.py  config.py  metrics.py  reporting.py  telegram.py  trading.py  websocket.py
app/services/: bitcoin_service.py  config_service.py  decision_maker_service.py  metrics_calculation_service.py  notification_service.py  onchain_metrics_service.py  persistent_storage_service.py  report_service.py  scheduler_service.py  simulated_trading_service.py  telegram_service.py  websocket_service.py
app/static/css/: style.css
app/static/js/: dashboard.js  main.js
app/templates/: base.html  index.html
app/templates/email/: weekly_report.html
docs/: ADVANCED_SETUP.md  ARCHITECTURE.md  CODE_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  PROJECT_STATUS.md  README.md  SETUP.md  SIMPLE_SETUP.md
docs/archive/: docker-setup-implementation.md
scripts/: dev-setup.sh  run_app.py  setup.py  validate-config.py
tools/: check_coinbase_sdk.py  inspect_coinbase_ws.py
